@@ -60,11 +60,16 @@ class PointOfSaleTransactionControllerImplTest {
         PageRequest.of(0, 10), 1
     );
 
-    PointOfSaleTransactionDTO dto = PointOfSaleTransactionDTOFaker.mockInstance(trx, INITIATIVE_ID,
-        FISCAL_CODE);
+    PointOfSaleTransactionDTO dto = PointOfSaleTransactionDTOFaker
+        .mockInstance(trx, INITIATIVE_ID, FISCAL_CODE);
 
     when(pointOfSaleTransactionService.getPointOfSaleTransactions(
-        eq(MERCHANT_ID), eq(INITIATIVE_ID), eq(POINT_OF_SALE_ID), isNull(), isNull(), isNull(),
+        eq(MERCHANT_ID),
+        eq(INITIATIVE_ID),
+        eq(POINT_OF_SALE_ID),
+        isNull(),
+        isNull(),
+        isNull(),
         any(Pageable.class)))
         .thenReturn(Mono.just(page));
 
@@ -73,18 +78,18 @@ class PointOfSaleTransactionControllerImplTest {
 
     webClient.get()
         .uri(uriBuilder -> uriBuilder
-            .path(
-                "/idpay/initiatives/{initiativeId}/point-of-sales/{pointOfSaleId}/transactions/processed")
+            .path("/idpay/initiatives/{initiativeId}/point-of-sales/{pointOfSaleId}/transactions/processed")
             .build(INITIATIVE_ID, POINT_OF_SALE_ID))
         .header("x-merchant-id", MERCHANT_ID)
+        .header("x-point-of-sale-id", POINT_OF_SALE_ID)
         .exchange()
         .expectStatus().isOk()
         .expectBody(PointOfSaleTransactionsListDTO.class)
         .value(res -> {
           assertNotNull(res);
           assertEquals(1, res.getContent().size());
-          assertEquals("TRX1", res.getContent().get(0).getTrxId());
-          assertEquals(FISCAL_CODE, res.getContent().get(0).getFiscalCode());
+          assertEquals("TRX1", res.getContent().getFirst().getTrxId());
+          assertEquals(FISCAL_CODE, res.getContent().getFirst().getFiscalCode());
           assertEquals(1, res.getTotalElements());
           assertEquals(1, res.getTotalPages());
           assertEquals(10, res.getPageSize());
@@ -138,5 +143,49 @@ class PointOfSaleTransactionControllerImplTest {
             .build(POINT_OF_SALE_ID, TRX_ID))
         .exchange()
         .expectStatus().isBadRequest();
+  }
+
+  @Test
+  void getPointOfSaleTransactionsForbidden() {
+    webClient.get()
+        .uri(uriBuilder -> uriBuilder
+            .path("/idpay/initiatives/{initiativeId}/point-of-sales/{pointOfSaleId}/transactions/processed")
+            .build(INITIATIVE_ID, POINT_OF_SALE_ID))
+        .header("x-merchant-id", MERCHANT_ID)
+        .header("x-point-of-sale-id", "ALTRO_POS")
+        .exchange()
+        .expectStatus().isForbidden();
+  }
+
+  @Test
+  void downloadInvoiceShouldReturnForbiddenOnPosMismatch() {
+    webClient.get()
+        .uri(uriBuilder -> uriBuilder
+            .path("/idpay/{pointOfSaleId}/transactions/{transactionId}/download")
+            .build(POINT_OF_SALE_ID, TRX_ID))
+        .header("x-merchant-id", MERCHANT_ID)
+        .header("x-point-of-sale-id", "ALTRO_POS")
+        .exchange()
+        .expectStatus().isForbidden();
+  }
+
+  @Test
+  void downloadInvoiceShouldReturnOkWithoutPosHeader() {
+    doReturn(Mono.just(DownloadInvoiceResponseDTO.builder().invoiceUrl("testUrl").build()))
+        .when(pointOfSaleTransactionService).downloadTransactionInvoice(
+            MERCHANT_ID, POINT_OF_SALE_ID, TRX_ID);
+
+    webClient.get()
+        .uri(uriBuilder -> uriBuilder
+            .path("/idpay/{pointOfSaleId}/transactions/{transactionId}/download")
+            .build(POINT_OF_SALE_ID, TRX_ID))
+        .header("x-merchant-id", MERCHANT_ID)
+        .exchange()
+        .expectStatus().isOk()
+        .expectBody(DownloadInvoiceResponseDTO.class)
+        .value(res -> {
+          assertNotNull(res);
+          assertEquals("testUrl", res.getInvoiceUrl());
+        });
   }
 }
